// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simpleDonut 1`] = `
{
  "annotation": {},
  "chartType": "donut",
  "config": {
    "donut": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
        "negativeColor": "#EB3373",
        "positiveColor": "#7E5DFF",
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelLayout": "arc",
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showDimension": true,
        "showValue": true,
        "showValuePercent": true,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "axisLabelColor": "#BCC1CB",
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "chartGridColor": "#F0F1F6",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
        "titleFontColor": "#21252c",
        "titleFontSize": 12,
        "titleFontWeight": "bold",
      },
      "tooltip": {
        "backgroundColor": "#fff",
        "borderColor": "#e3e5e8",
        "borderRadius": 12,
        "borderWidth": 1,
        "enable": true,
        "fontSize": 12,
        "keyColor": "#606773",
        "lineHeight": 12,
        "lineSpace": 6,
        "padding": 7,
        "titleColor": "#21252c",
        "valueColor": "#21252c",
      },
    },
  },
  "customTheme": {
    "config": {
      "donut": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
          "negativeColor": "#EB3373",
          "positiveColor": "#7E5DFF",
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelLayout": "arc",
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showDimension": true,
          "showValue": true,
          "showValuePercent": true,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "axisLabelColor": "#BCC1CB",
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "chartGridColor": "#F0F1F6",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
          "titleFontColor": "#21252c",
          "titleFontSize": 12,
          "titleFontWeight": "bold",
        },
        "tooltip": {
          "backgroundColor": "#fff",
          "borderColor": "#e3e5e8",
          "borderRadius": 12,
          "borderWidth": 1,
          "enable": true,
          "fontSize": 12,
          "keyColor": "#606773",
          "lineHeight": 12,
          "lineSpace": 6,
          "padding": 7,
          "titleColor": "#21252c",
          "valueColor": "#21252c",
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "2019-A-goalProfit",
      "__Dim_Color__": "2019-A-goalProfit",
      "__Dim_Detail__": "2019-A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "goalProfit": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2019-A-profit",
      "__Dim_Color__": "2019-A-profit",
      "__Dim_Detail__": "2019-A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2019-A-sales",
      "__Dim_Color__": "2019-A-sales",
      "__Dim_Detail__": "2019-A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2019-A-leftCount",
      "__Dim_Color__": "2019-A-leftCount",
      "__Dim_Detail__": "2019-A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "leftCount": 1,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2019-A-salesCount",
      "__Dim_Color__": "2019-A-salesCount",
      "__Dim_Detail__": "2019-A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "salesCount": 100,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A-goalProfit",
      "__Dim_Color__": "2020-A-goalProfit",
      "__Dim_Detail__": "2020-A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "goalProfit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A-profit",
      "__Dim_Color__": "2020-A-profit",
      "__Dim_Detail__": "2020-A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A-sales",
      "__Dim_Color__": "2020-A-sales",
      "__Dim_Detail__": "2020-A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 320,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "sales": 320,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A-leftCount",
      "__Dim_Color__": "2020-A-leftCount",
      "__Dim_Detail__": "2020-A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "leftCount": 2,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2020-A-salesCount",
      "__Dim_Color__": "2020-A-salesCount",
      "__Dim_Detail__": "2020-A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 200,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "salesCount": 200,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A-goalProfit",
      "__Dim_Color__": "2021-A-goalProfit",
      "__Dim_Detail__": "2021-A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "goalProfit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A-profit",
      "__Dim_Color__": "2021-A-profit",
      "__Dim_Detail__": "2021-A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A-sales",
      "__Dim_Color__": "2021-A-sales",
      "__Dim_Detail__": "2021-A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "sales": 300,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A-leftCount",
      "__Dim_Color__": "2021-A-leftCount",
      "__Dim_Detail__": "2021-A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "leftCount": 3,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2021-A-salesCount",
      "__Dim_Color__": "2021-A-salesCount",
      "__Dim_Detail__": "2021-A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "salesCount": 300,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A-goalProfit",
      "__Dim_Color__": "2022-A-goalProfit",
      "__Dim_Detail__": "2022-A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "goalProfit": 50,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A-profit",
      "__Dim_Color__": "2022-A-profit",
      "__Dim_Detail__": "2022-A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "profit": 50,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A-sales",
      "__Dim_Color__": "2022-A-sales",
      "__Dim_Detail__": "2022-A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 240,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "sales": 240,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A-leftCount",
      "__Dim_Color__": "2022-A-leftCount",
      "__Dim_Detail__": "2022-A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 4,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "leftCount": 4,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2022-A-salesCount",
      "__Dim_Color__": "2022-A-salesCount",
      "__Dim_Detail__": "2022-A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 400,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "salesCount": 400,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A-goalProfit",
      "__Dim_Color__": "2023-A-goalProfit",
      "__Dim_Detail__": "2023-A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "goalProfit": 40,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A-profit",
      "__Dim_Color__": "2023-A-profit",
      "__Dim_Detail__": "2023-A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "profit": 40,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A-sales",
      "__Dim_Color__": "2023-A-sales",
      "__Dim_Detail__": "2023-A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "sales": 500,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A-leftCount",
      "__Dim_Color__": "2023-A-leftCount",
      "__Dim_Detail__": "2023-A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 5,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "leftCount": 5,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "2023-A-salesCount",
      "__Dim_Color__": "2023-A-salesCount",
      "__Dim_Detail__": "2023-A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "salesCount": 500,
      "type": "A",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "goalProfit": "goalProfit",
          "leftCount": "leftCount",
          "profit": "profit",
          "sales": "sales",
          "salesCount": "salesCount",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 25,
          "max": 500,
          "min": 1,
          "sum": 3295,
        },
      },
      "id": "donut",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-A-goalProfit": {
            "alias": "2019-A-goalProfit",
            "id": "2019-A-goalProfit",
          },
          "2019-A-leftCount": {
            "alias": "2019-A-leftCount",
            "id": "2019-A-leftCount",
          },
          "2019-A-profit": {
            "alias": "2019-A-profit",
            "id": "2019-A-profit",
          },
          "2019-A-sales": {
            "alias": "2019-A-sales",
            "id": "2019-A-sales",
          },
          "2019-A-salesCount": {
            "alias": "2019-A-salesCount",
            "id": "2019-A-salesCount",
          },
          "2020-A-goalProfit": {
            "alias": "2020-A-goalProfit",
            "id": "2020-A-goalProfit",
          },
          "2020-A-leftCount": {
            "alias": "2020-A-leftCount",
            "id": "2020-A-leftCount",
          },
          "2020-A-profit": {
            "alias": "2020-A-profit",
            "id": "2020-A-profit",
          },
          "2020-A-sales": {
            "alias": "2020-A-sales",
            "id": "2020-A-sales",
          },
          "2020-A-salesCount": {
            "alias": "2020-A-salesCount",
            "id": "2020-A-salesCount",
          },
          "2021-A-goalProfit": {
            "alias": "2021-A-goalProfit",
            "id": "2021-A-goalProfit",
          },
          "2021-A-leftCount": {
            "alias": "2021-A-leftCount",
            "id": "2021-A-leftCount",
          },
          "2021-A-profit": {
            "alias": "2021-A-profit",
            "id": "2021-A-profit",
          },
          "2021-A-sales": {
            "alias": "2021-A-sales",
            "id": "2021-A-sales",
          },
          "2021-A-salesCount": {
            "alias": "2021-A-salesCount",
            "id": "2021-A-salesCount",
          },
          "2022-A-goalProfit": {
            "alias": "2022-A-goalProfit",
            "id": "2022-A-goalProfit",
          },
          "2022-A-leftCount": {
            "alias": "2022-A-leftCount",
            "id": "2022-A-leftCount",
          },
          "2022-A-profit": {
            "alias": "2022-A-profit",
            "id": "2022-A-profit",
          },
          "2022-A-sales": {
            "alias": "2022-A-sales",
            "id": "2022-A-sales",
          },
          "2022-A-salesCount": {
            "alias": "2022-A-salesCount",
            "id": "2022-A-salesCount",
          },
          "2023-A-goalProfit": {
            "alias": "2023-A-goalProfit",
            "id": "2023-A-goalProfit",
          },
          "2023-A-leftCount": {
            "alias": "2023-A-leftCount",
            "id": "2023-A-leftCount",
          },
          "2023-A-profit": {
            "alias": "2023-A-profit",
            "id": "2023-A-profit",
          },
          "2023-A-sales": {
            "alias": "2023-A-sales",
            "id": "2023-A-sales",
          },
          "2023-A-salesCount": {
            "alias": "2023-A-salesCount",
            "id": "2023-A-salesCount",
          },
        },
        "colorItems": [
          "2019-A-goalProfit",
          "2019-A-profit",
          "2019-A-sales",
          "2019-A-leftCount",
          "2019-A-salesCount",
          "2020-A-goalProfit",
          "2020-A-profit",
          "2020-A-sales",
          "2020-A-leftCount",
          "2020-A-salesCount",
          "2021-A-goalProfit",
          "2021-A-profit",
          "2021-A-sales",
          "2021-A-leftCount",
          "2021-A-salesCount",
          "2022-A-goalProfit",
          "2022-A-profit",
          "2022-A-sales",
          "2022-A-leftCount",
          "2022-A-salesCount",
          "2023-A-goalProfit",
          "2023-A-profit",
          "2023-A-sales",
          "2023-A-leftCount",
          "2023-A-salesCount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
    },
    {
      "alias": "type",
      "id": "type",
    },
    {
      "alias": "指标Id",
      "id": "__MeaId__",
    },
  ],
  "encoding": {
    "angle": [
      "goalProfit",
      "profit",
      "sales",
      "leftCount",
      "salesCount",
    ],
    "color": [
      "date",
      "type",
      "__MeaId__",
    ],
    "column": [],
    "detail": [
      "date",
      "type",
      "__MeaId__",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "date",
      "type",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "alias": "goalProfit",
      "id": "goalProfit",
    },
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
    {
      "alias": "leftCount",
      "id": "leftCount",
    },
    {
      "alias": "salesCount",
      "id": "salesCount",
    },
  ],
}
`;

exports[`simpleDonut 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      "2019-A-goalProfit",
      "2019-A-profit",
      "2019-A-sales",
      "2019-A-leftCount",
      "2019-A-salesCount",
      "2020-A-goalProfit",
      "2020-A-profit",
      "2020-A-sales",
      "2020-A-leftCount",
      "2020-A-salesCount",
      "2021-A-goalProfit",
      "2021-A-profit",
      "2021-A-sales",
      "2021-A-leftCount",
      "2021-A-salesCount",
      "2022-A-goalProfit",
      "2022-A-profit",
      "2022-A-sales",
      "2022-A-leftCount",
      "2022-A-salesCount",
      "2023-A-goalProfit",
      "2023-A-profit",
      "2023-A-sales",
      "2023-A-leftCount",
      "2023-A-salesCount",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "donut",
    "values": [
      {
        "__Dim_ColorId__": "2019-A-goalProfit",
        "__Dim_Color__": "2019-A-goalProfit",
        "__Dim_Detail__": "2019-A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2019-A-profit",
        "__Dim_Color__": "2019-A-profit",
        "__Dim_Detail__": "2019-A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2019-A-sales",
        "__Dim_Color__": "2019-A-sales",
        "__Dim_Detail__": "2019-A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2019-A-leftCount",
        "__Dim_Color__": "2019-A-leftCount",
        "__Dim_Detail__": "2019-A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "leftCount": 1,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2019-A-salesCount",
        "__Dim_Color__": "2019-A-salesCount",
        "__Dim_Detail__": "2019-A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "salesCount": 100,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A-goalProfit",
        "__Dim_Color__": "2020-A-goalProfit",
        "__Dim_Detail__": "2020-A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A-profit",
        "__Dim_Color__": "2020-A-profit",
        "__Dim_Detail__": "2020-A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A-sales",
        "__Dim_Color__": "2020-A-sales",
        "__Dim_Detail__": "2020-A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 320,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "sales": 320,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A-leftCount",
        "__Dim_Color__": "2020-A-leftCount",
        "__Dim_Detail__": "2020-A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "leftCount": 2,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2020-A-salesCount",
        "__Dim_Color__": "2020-A-salesCount",
        "__Dim_Detail__": "2020-A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 200,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "salesCount": 200,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A-goalProfit",
        "__Dim_Color__": "2021-A-goalProfit",
        "__Dim_Detail__": "2021-A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A-profit",
        "__Dim_Color__": "2021-A-profit",
        "__Dim_Detail__": "2021-A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A-sales",
        "__Dim_Color__": "2021-A-sales",
        "__Dim_Detail__": "2021-A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "sales": 300,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A-leftCount",
        "__Dim_Color__": "2021-A-leftCount",
        "__Dim_Detail__": "2021-A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "leftCount": 3,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2021-A-salesCount",
        "__Dim_Color__": "2021-A-salesCount",
        "__Dim_Detail__": "2021-A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "salesCount": 300,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A-goalProfit",
        "__Dim_Color__": "2022-A-goalProfit",
        "__Dim_Detail__": "2022-A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A-profit",
        "__Dim_Color__": "2022-A-profit",
        "__Dim_Detail__": "2022-A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "profit": 50,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A-sales",
        "__Dim_Color__": "2022-A-sales",
        "__Dim_Detail__": "2022-A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 240,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "sales": 240,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A-leftCount",
        "__Dim_Color__": "2022-A-leftCount",
        "__Dim_Detail__": "2022-A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 4,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "leftCount": 4,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2022-A-salesCount",
        "__Dim_Color__": "2022-A-salesCount",
        "__Dim_Detail__": "2022-A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 400,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "salesCount": 400,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A-goalProfit",
        "__Dim_Color__": "2023-A-goalProfit",
        "__Dim_Detail__": "2023-A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A-profit",
        "__Dim_Color__": "2023-A-profit",
        "__Dim_Detail__": "2023-A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "profit": 40,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A-sales",
        "__Dim_Color__": "2023-A-sales",
        "__Dim_Detail__": "2023-A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "sales": 500,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A-leftCount",
        "__Dim_Color__": "2023-A-leftCount",
        "__Dim_Detail__": "2023-A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 5,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "leftCount": 5,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "2023-A-salesCount",
        "__Dim_Color__": "2023-A-salesCount",
        "__Dim_Detail__": "2023-A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "salesCount": 500,
        "type": "A",
      },
    ],
  },
  "innerRadius": 0.6400000000000001,
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "layout": {
      "align": "arc",
    },
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "large": false,
  "largeThreshold": Infinity,
  "legends": {
    "autoPage": true,
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
          "unSelectedHover": {
            "fill": null,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "state": {
          "unSelected": {
            "fill": "#646A73",
            "fillOpacity": 0.8,
          },
        },
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "state": {
          "unSelected": {
            "fillOpacity": 1,
            "opacity": 0.2,
          },
        },
        "style": [Function],
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.8,
  "padding": 0,
  "pie": {
    "state": {
      "hover": {
        "outerRadius": 0.8800000000000001,
      },
    },
    "style": {
      "lineWidth": 1,
      "stroke": "transparent",
    },
  },
  "progressiveStep": 400,
  "progressiveThreshold": Infinity,
  "region": [
    {
      "clip": true,
    },
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": "goalProfit",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "style": {
      "keyLabel": {
        "fontColor": "#606773",
        "fontSize": 12,
        "lineHeight": 12,
      },
      "panel": {
        "backgroundColor": "#fff",
        "border": {
          "color": "#e3e5e8",
          "radius": 12,
          "width": 1,
        },
        "padding": 7,
      },
      "titleLabel": {
        "fontColor": "#21252c",
        "fontSize": 12,
        "fontWeight": "bold",
        "lineHeight": 12,
      },
      "valueLabel": {
        "fontColor": "#21252c",
        "fontSize": 12,
        "fontWeight": "medium",
        "lineHeight": 12,
      },
    },
    "visible": true,
  },
  "type": "pie",
  "valueField": "__MeaValue__",
}
`;

exports[`simpleDonut 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "2019-A-goalProfit": {
      "alias": "2019-A-goalProfit",
      "id": "2019-A-goalProfit",
    },
    "2019-A-leftCount": {
      "alias": "2019-A-leftCount",
      "id": "2019-A-leftCount",
    },
    "2019-A-profit": {
      "alias": "2019-A-profit",
      "id": "2019-A-profit",
    },
    "2019-A-sales": {
      "alias": "2019-A-sales",
      "id": "2019-A-sales",
    },
    "2019-A-salesCount": {
      "alias": "2019-A-salesCount",
      "id": "2019-A-salesCount",
    },
    "2020-A-goalProfit": {
      "alias": "2020-A-goalProfit",
      "id": "2020-A-goalProfit",
    },
    "2020-A-leftCount": {
      "alias": "2020-A-leftCount",
      "id": "2020-A-leftCount",
    },
    "2020-A-profit": {
      "alias": "2020-A-profit",
      "id": "2020-A-profit",
    },
    "2020-A-sales": {
      "alias": "2020-A-sales",
      "id": "2020-A-sales",
    },
    "2020-A-salesCount": {
      "alias": "2020-A-salesCount",
      "id": "2020-A-salesCount",
    },
    "2021-A-goalProfit": {
      "alias": "2021-A-goalProfit",
      "id": "2021-A-goalProfit",
    },
    "2021-A-leftCount": {
      "alias": "2021-A-leftCount",
      "id": "2021-A-leftCount",
    },
    "2021-A-profit": {
      "alias": "2021-A-profit",
      "id": "2021-A-profit",
    },
    "2021-A-sales": {
      "alias": "2021-A-sales",
      "id": "2021-A-sales",
    },
    "2021-A-salesCount": {
      "alias": "2021-A-salesCount",
      "id": "2021-A-salesCount",
    },
    "2022-A-goalProfit": {
      "alias": "2022-A-goalProfit",
      "id": "2022-A-goalProfit",
    },
    "2022-A-leftCount": {
      "alias": "2022-A-leftCount",
      "id": "2022-A-leftCount",
    },
    "2022-A-profit": {
      "alias": "2022-A-profit",
      "id": "2022-A-profit",
    },
    "2022-A-sales": {
      "alias": "2022-A-sales",
      "id": "2022-A-sales",
    },
    "2022-A-salesCount": {
      "alias": "2022-A-salesCount",
      "id": "2022-A-salesCount",
    },
    "2023-A-goalProfit": {
      "alias": "2023-A-goalProfit",
      "id": "2023-A-goalProfit",
    },
    "2023-A-leftCount": {
      "alias": "2023-A-leftCount",
      "id": "2023-A-leftCount",
    },
    "2023-A-profit": {
      "alias": "2023-A-profit",
      "id": "2023-A-profit",
    },
    "2023-A-sales": {
      "alias": "2023-A-sales",
      "id": "2023-A-sales",
    },
    "2023-A-salesCount": {
      "alias": "2023-A-salesCount",
      "id": "2023-A-salesCount",
    },
  },
  "colorItems": [
    {
      "alias": "2019-A-goalProfit",
      "id": "2019-A-goalProfit",
    },
    {
      "alias": "2019-A-profit",
      "id": "2019-A-profit",
    },
    {
      "alias": "2019-A-sales",
      "id": "2019-A-sales",
    },
    {
      "alias": "2019-A-leftCount",
      "id": "2019-A-leftCount",
    },
    {
      "alias": "2019-A-salesCount",
      "id": "2019-A-salesCount",
    },
    {
      "alias": "2020-A-goalProfit",
      "id": "2020-A-goalProfit",
    },
    {
      "alias": "2020-A-profit",
      "id": "2020-A-profit",
    },
    {
      "alias": "2020-A-sales",
      "id": "2020-A-sales",
    },
    {
      "alias": "2020-A-leftCount",
      "id": "2020-A-leftCount",
    },
    {
      "alias": "2020-A-salesCount",
      "id": "2020-A-salesCount",
    },
    {
      "alias": "2021-A-goalProfit",
      "id": "2021-A-goalProfit",
    },
    {
      "alias": "2021-A-profit",
      "id": "2021-A-profit",
    },
    {
      "alias": "2021-A-sales",
      "id": "2021-A-sales",
    },
    {
      "alias": "2021-A-leftCount",
      "id": "2021-A-leftCount",
    },
    {
      "alias": "2021-A-salesCount",
      "id": "2021-A-salesCount",
    },
    {
      "alias": "2022-A-goalProfit",
      "id": "2022-A-goalProfit",
    },
    {
      "alias": "2022-A-profit",
      "id": "2022-A-profit",
    },
    {
      "alias": "2022-A-sales",
      "id": "2022-A-sales",
    },
    {
      "alias": "2022-A-leftCount",
      "id": "2022-A-leftCount",
    },
    {
      "alias": "2022-A-salesCount",
      "id": "2022-A-salesCount",
    },
    {
      "alias": "2023-A-goalProfit",
      "id": "2023-A-goalProfit",
    },
    {
      "alias": "2023-A-profit",
      "id": "2023-A-profit",
    },
    {
      "alias": "2023-A-sales",
      "id": "2023-A-sales",
    },
    {
      "alias": "2023-A-leftCount",
      "id": "2023-A-leftCount",
    },
    {
      "alias": "2023-A-salesCount",
      "id": "2023-A-salesCount",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
